Fixed inputplaceholder icon stripe overlapping

--- a/app/client/stylesheets/components/pu-inputholder.sass
+++ b/app/client/stylesheets/components/pu-inputholder.sass
@@ -5,8 +5,8 @@
         display: block
         z-index: 2
         position: absolute
-        top: 0
-        bottom: 0
+        top: 2px
+        bottom: 2px
         width: 40px
         pointer-events: none
         color: lighten($color-dusty-gray, 10%)
